--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "dev": "nodemon Backend/index.js",
+        "dev": "node Backend/index.js",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
